--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@nixjs23n6/web-storage": "^0.0.4",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
@@ -43,6 +44,7 @@
     "cmdk": "1.0.4",
     "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.468.0",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
